<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Goose Reader</string>
    <string name="base_url">http://abstrusegoose.com/</string>
    <string name="find_comic_anchor">.storytitle a</string>
    <string name="find_anchor_tag">a[rel]</string>
    <string name="find_div_tag">.post</string>
    <string name="find_image_tag">section img[src]</string>
    <string name="first_comic">First Comic</string>
    <string name="image_source">src</string>
    <string name="image_title">title</string>
    <string name="latest_comic">Latest Comic</string>
    <string name="loading_comic">Loading comic...</string>
    <string name="loading_error">There was an error loading this comic.\nYou can refresh from the menu to retry.</string>
    <string name="next_comic">Next Comic</string>
    <string name="plain_text">text/plain</string>
    <string name="previous_comic">Previous Comic</string>
    <string name="random_comic">Random Comic</string>
    <string name="share_message">Check out this comic:\n</string>
    <string name="share_title">Share Comic</string>
</resources>