<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
	    android:layout_height="0dip"
		android:layout_width="fill_parent"
		android:id="@+id/imageLayout"
		android:layout_weight="1">
		<android.webkit.WebView
			android:id="@+id/comicView"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:longClickable="true"/>
	</LinearLayout>
	<LinearLayout
	    android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:id="@+id/buttonLayout"
		android:paddingTop="5dip"
		android:paddingBottom="10dip"
		android:gravity="center">
		<ImageButton
		    android:contentDescription="@string/first_comic"
			android:layout_margin="5dip"
			android:background="@drawable/first"
			android:id="@+id/firstButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:hapticFeedbackEnabled="true"
			android:onClick="navigationButtonHandler"/>
		<ImageButton
		    android:contentDescription="@string/previous_comic"
			android:layout_margin="5dip"
			android:background="@drawable/previous"
			android:id="@+id/previousButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:hapticFeedbackEnabled="true"
			android:onClick="navigationButtonHandler"/>
		<ImageButton
		    android:contentDescription="@string/random_comic"
			android:layout_margin="5dip"
			android:background="@drawable/random"
			android:id="@+id/randomButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:hapticFeedbackEnabled="true"
			android:onClick="navigationButtonHandler"/>
		<ImageButton
		    android:contentDescription="@string/next_comic"
			android:layout_margin="5dip"
			android:background="@drawable/next"
			android:id="@+id/nextButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:hapticFeedbackEnabled="true"
			android:onClick="navigationButtonHandler"/>
		<ImageButton
		    android:contentDescription="@string/latest_comic"
			android:layout_margin="5dip"
			android:background="@drawable/current"
			android:id="@+id/currentButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:hapticFeedbackEnabled="true"
			android:onClick="navigationButtonHandler"/>
	</LinearLayout>
</LinearLayout>
